2015-12-01  Youri Hoogstrate
	* v1.1.0
	  - Fixed a issue that seemed to randomly change data
	  - Solved a bug that allowed w()-type bifurcations to act as a
	    normal loop
	  - Added more strict debug comparions and tests

2015-08-06  Youri Hoogstrate
	* Added separate object for indendent traceback in Segment objects
	* Changed behavior of <bonds> variables
	* Changed traceback

2015-07-23  Youri Hoogstrate
	* Fixed a memory leak and changed organization of ReadSegments
	* Added some tests and improved the energy utility

2015-07-15  Youri Hoogstrate
	* Added the energy-estimation-utility python package in ./scripts
	* Argument -t is implemented and allows to control the number of
	  threads
	  - Added corresponding tests
	* Argument -p is implemented and disables segment functionality
	  - Added corresponding tests

2015-07-15  Youri Hoogstrate
	* Added K-turn from U85 scaRNA's stem
	* Fixed tiny bug in Settings_test
	* Stay stick to term 'segment'

2015-07-14  Youri Hoogstrate
	* v1.0.0
	  - Added source and test files for main -> stable working version
	  - Added installer

2015-07-13  Youri Hoogstrate
	* Added source and test files for Zuker object

2015-07-10  Youri Hoogstrate
	* Added source and test files for GibbsFreeEnergy object

2015-06-30  Youri Hoogstrate
	* Travis CI tests for memory leaks (made ScoringMatrix smaller)
	* Added Pairing object and corresponding tests

2015-06-28  Youri Hoogstrate
	* Added the sparse triangular matrix object ScoringMatrix and
	  corresponding tests

2015-06-23  Youri Hoogstrate
	* Textual changes
	* Fixed two bugs in Settings
	* Added ReadData object files
	* Enabled testing of Settings objects

2015-06-22  Youri Hoogstrate
	* Added Settings object files
	* Added a test to validate parsing the '--help' argument
	* Added a test to validate parsing the '-V' argument
	* Added a test to validate parsing the '-f' argument
	* Changed variable in test/ReadSegments_test.cpp to const
	* Configuration for Travis CI
